src/css/base.scss
/* ... */
.dc__bold {
    font-weight: 700;
}

.dc__small-text {
    font-size: 9px;
}

.dc__float-right {
    float: right;
}

.dc__float-left {
    float: left;
}

.dc__clear-both {
    clear: both;
}

.dc__word-break-all {
    word-break: break-all;
}

.dc__word-break {
    word-break: break-word;
}

.dc__white-space-normal {
    white-space: normal;
}

.dc__white-space-pre {
    white-space: pre;
}

.dc__white-space-pre-wrap {
    white-space: pre-wrap;
}

.dc__hyphens-auto {
    -ms-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
}

//Do not use dc__truncate-text use dc__ellipsis-right

.dc__truncate-text {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-width: 0px;
}

.dc__position-fixed {
    position: fixed;
}

.dc__position-rel {
    position: relative;
}

.dc__position-rel-imp {
    position: relative !important;
}

.dc__position-abs {
    position: absolute;
}

.dc__position-sticky {
    position: sticky;
}

.dc__position-abs-b-20 {
    position: absolute;
    bottom: 20px;
}

.dc__top-0 {
    top: 0;
}

.dc__top-12 {
    top: 12px;
}

.dc__top-20 {
    top: 20px;
}

.dc__top-22 {
    top: 22px;
}

.dc__top-48 {
    top: 48px;
}

.dc__top-26 {
    top: 26px;
}

.dc__top-34 {
    top: 34px;
}

.dc__top-36 {
    top: 36px;
}

.dc__top-44 {
    top: 44px;
}

.dc__top-47 {
    top: 47px;
}

.dc__top-49 {
    top: 49px;
}

.dc__top-77 {
    top: 77px;
}

.dc__top-80 {
    top: 80px;
}

.dc__top-88 {
    top: 88px;
}

.dc__bottom-0 {
    bottom: 0;
}

.dc__bottom-16 {
    bottom: 16px;
}

.dc__bottom-12 {
    bottom: 12px;
}

.dc__bottom-20 {
    bottom: 20px;
}

.dc__bottom-30-imp {
    bottom: 30px !important;
}

.dc__right-0 {
    right: 0;
}

.dc__right-3--neg {
    right: -3px;
}

.dc__right-10 {
    right: 10px;
}

.dc__right-12 {
    right: 12px;
}

.dc__right-20 {
    right: 20px;
}

.dc__left-0 {
    left: 0;
}

.dc__left-12 {
    left: 12px;
}

.dc__left-20 {
    left: 20px;
}

.dc__left-35 {
    left: 35px;
}

.dc__left-55 {
    left: 55px;
}

.dc__left-65 {
    left: 65px;
}

.dc__right-20 {
    right: 20px;
}

.dc__vertical-align-middle {
    vertical-align: middle;
}

.dc__vertical-align-bottom {
    vertical-align: bottom;
}

//duplicate style use .cursor class
.pointer {
    cursor: pointer;
}

.dc__cursor--ns-resize {
    cursor: ns-resize;
}

.cursor {
    cursor: pointer;
}

.cursor-not-allowed {
    cursor: not-allowed !important;
}

.cursor-text {
    cursor: text;
}

.cursor-default {
    cursor: default;
}

// block
.dc__block {
    display: block;
}

.dc__block-imp {
    display: block !important;
}

.dc__inline-block {
    display: inline-block;
}

.dc__inline-flex {
    display: inline-flex;
}

//remove
.form {
    margin: 0px;
    background-color: var(--bg-primary);
}

.form__row--two-third {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-column-gap: 16px;
}

.form__row--one-third {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-column-gap: 16px;
}

.dc__grid-row-one-half {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.build-context-label {
    justify-content: none;
}

.build-context-highlight {
    background: var(--N200);
    white-space: nowrap;
}

// Pop Up
.popup {
    position: fixed;
    z-index: var(--modal-index);
    background: var(--bg-menu-primary);
    border-radius: 4px;
    box-shadow: 0 2px 4px 0 rgba(21, 21, 21, 0.3);

    .no-option-found {
        height: 36px;
        opacity: 0.5;
        justify-content: flex-start;
        padding: 0 20px;
    }
}

.popup-button {
    background-color: inherit;
    padding: 0px;
    border: solid 1px var(--N200);
    border-radius: 4px;
    width: 100%;
}

.popup-button.popup-button--error {
    border: 1px solid var(--R500);
}

.popup-button-kebab {
    border: none;
    background-color: inherit;
    padding: 0px;
    border: solid 1px transparent;
    border-radius: 4px;
}

.popup-body.popup-body--empty {
    height: 0;
    width: 0;
    padding: 0;
}

.popup-button:hover {
    border: solid 1px var(--N400);
}

.popup-button:focus,
.popup-button:active {
    border: solid 1px var(--B500);
    outline: none;
}

.popup-button[disabled] {
    background-color: var(--N100);
    cursor: not-allowed;
    border: 1px solid var(--N200);
}

//TODO: remove. unused
.logs {
    .log {
        display: grid;
        width: 100%;
        height: 100%;

        &.active {
            color: var(--B500);
            font-weight: 600;
            border-bottom: solid 2px var(--B500);
        }
    }

    .tab-list__tab.active {
        color: var(--B500);
        font-weight: 600;
        border-bottom: solid 2px var(--B500);
    }

    .tab-list__tab-link:hover,
    .tab-list__tab-link:focus {
        text-decoration: none;
    }

    .white-card {
        border-radius: 4px;
        border: solid 1px var(--border-primary);
        background-color: var(--bg-primary);
    }
}

.dc__ellipsis-right {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.dc__ellipsis-right__2nd-line {
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 2;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    word-break: break-word;
}

.dc__ellipsis-left {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    direction: rtl;
}

.dc__ellipsis-left {
    &.direction-left {
        text-align: left;
    }

    &.text-overflow-clip {
        text-overflow: clip;
    }
}

.anchor {
    color: var(--B500);
    text-decoration: none;

    &:hover {
        text-decoration: none;
        color: var(--B500);
    }
}

button.anchor {
    outline: none;
    box-shadow: unset;
    border: unset;
    background: transparent;
}

.dc__cd-trigger-status {
    margin: 12px;
    margin-top: 6px;
    margin-bottom: 10px;
    text-transform: capitalize;
    font-weight: 600;
    min-height: 20px;
    display: flex;
    color: var(--N400);
}
/* ... */

